user home removed

--- a/App/AppInfo/Launcher/PhpStormPortable.ini
+++ b/App/AppInfo/Launcher/PhpStormPortable.ini
@@ -5,4 +5,4 @@ DirectoryMoveOK=yes
 SupportsUNC=yes
 
 [Environment]
-_JAVA_OPTIONS=-Didea.config.path=%PAL:DataDir%\settings\config -Didea.system.path=%PAL:DataDir%\settings\system -Duser.home=%PortableApps.comDocuments%
+_JAVA_OPTIONS=-Didea.config.path=%PAL:DataDir%\settings\config -Didea.system.path=%PAL:DataDir%\settings\system
