no platform update

--- a/App/AppInfo/Launcher/PhpStormPortable.ini
+++ b/App/AppInfo/Launcher/PhpStormPortable.ini
@@ -5,4 +5,4 @@ DirectoryMoveOK=yes
 SupportsUNC=yes
 
 [Environment]
-_JAVA_OPTIONS=-Didea.config.path=%PAL:DataDir%\settings\config -Didea.system.path=%PAL:DataDir%\settings\system
+_JAVA_OPTIONS=-Didea.config.path=%PAL:DataDir%\settings\config -Didea.system.path=%PAL:DataDir%\settings\system -Dide.no.platform.update=true
