--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -45,7 +45,7 @@ CommercialUse=true
 ;This section indicates to the launcher and platform what this app needs to function
 ;See details at: https://portableapps.com/development/portableapps.com_format#appinfo
 ;UsesGhostscript=optional
-;UsesJava=no
+UsesJava=yes
 ;UsesDotNetVersion=
 
 [Version]
