--- a/App/AppInfo/Launcher/PhpStormPortable.ini
+++ b/App/AppInfo/Launcher/PhpStormPortable.ini
@@ -4,5 +4,9 @@ ProgramExecutable64=PhpStorm\bin\phpstorm64.exe
 DirectoryMoveOK=yes
 SupportsUNC=yes
 
+[Activate]
+Java=require
+
 [Environment]
-_JAVA_OPTIONS=-Didea.config.path=%PAL:DataDir%\settings\config -Didea.system.path=%PAL:DataDir%\settings\system -Dide.no.platform.update=true
+JAVA_TOOL_OPTIONS=-Didea.config.path="%PAL:DataDir%\settings\config" -Didea.system.path="%PAL:DataDir%\settings\system" -Dide.no.platform.update=true
+APPDATA=%PAL:DataDir%\settings
