--- a/App/AppInfo/installer.ini
+++ b/App/AppInfo/installer.ini
@@ -1,3 +1,6 @@
+[Source]
+IncludeInstallerSource=false
+
 [DownloadFiles]
 AdditionalInstallSize=237740
 DownloadURL=http://download.jetbrains.com/webide/PhpStorm-2019.1.3.exe
