--- a/App/AppInfo/Launcher/PhpStormPortable.ini
+++ b/App/AppInfo/Launcher/PhpStormPortable.ini
@@ -8,5 +8,5 @@ SupportsUNC=yes
 Java=require
 
 [Environment]
-APPDATA=%PAL:DataDir%\settings
-JAVA_TOOL_OPTIONS=-Didea.config.path="%APPDATA%\config" -Didea.system.path="%APPDATA%\system" -Dide.no.platform.update=true
+JAVA_TOOL_OPTIONS=-Didea.config.path="%PAL:DataDir%\settings\config" -Didea.system.path="%PAL:DataDir%\settings\system" -Dide.no.platform.update=true
+APPDATA=%PAL:DataDir%
